<resources>
    <string name="app_name">FlashCards</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete selection</string>
    <string name="action_edit">Edit</string>
    <string name="action_merge">Merge selection</string>
    <string name="action_view">View</string>
    <string name="alert_merge_deck">Selected decks will be merged.  Enter new deck name:</string>
    <string name="alert_name_deck">Enter deck name:</string>
    <string name="alert_name_accept">OK</string>
    <string name="alert_name_cancel">Cancel</string>
    <string name="alert_yes">Yes</string>
    <string name="prompt_question">Question:</string>
    <string name="prompt_answer">Answer:</string>
    <string name="prompt_options">Incorrect Answer Choices:</string>
    <string name="dialog_play_or_edit">What do you want to do?</string>
    <string name="dialog_button_play">Play</string>
    <string name="dialog_button_edit">View cards</string>
    <string name="notify_no_decks">You have no decks yet!  Click the + icon to get started!</string>
    <string name="notify_no_cards">Click + to start adding cards!</string>
    <string name="score_text">Score: %d</string>
    <string name="button_text_play"></string>
    <string name="button_text_view_cards"></string>
    <string name="deck_time_new">new!</string>
    <string name="deck_time_overflow">10+ d</string>
    <string name="deck_time_days">%d d</string>
    <string name="deck_time_hours">%d h</string>
    <string name="deck_time_minutes">%d m</string>
    <plurals name="alert_delete_card">
        <item quantity="one">%d card will be deleted. Proceed?</item>
        <item quantity="other">%d cards will be deleted. Proceed?</item>
    </plurals>
    <plurals name="alert_delete_deck">
        <item quantity="one">%d deck will be deleted. Proceed?</item>
        <item quantity="other">%d decks will be deleted. Proceed?</item>
    </plurals>
    <plurals name="card_count">
        <item quantity="one">%d Card</item>
        <item quantity="other">%d Cards</item>
    </plurals>
</resources>
