<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group_actions_one_or_more"
        android:visible="false">
        <item android:id="@+id/action_delete"
            android:icon="@mipmap/icon_delete"
            android:title="@string/action_delete"
            app:showAsAction="ifRoom"/>
    </group>
    <group android:id="@+id/group_actions_two_or_more"
        android:visible="false">
        <item android:id="@+id/action_merge"
            android:icon="@mipmap/icon_merge"
            android:title="@string/action_merge"
            app:showAsAction="ifRoom"/>
    </group>
    <group android:id="@+id/group_actions_only_one">
        <item android:id="@+id/action_edit"
            android:icon="@mipmap/icon_edit"
            android:title="@string/action_edit"
            app:showAsAction="ifRoom"/>
    </group>

</menu>