<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:textSize="14pt"
                android:text="@string/prompt_question"/>
            <EditText
                android:layout_margin="8dp"
                android:id="@+id/question_edit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:inputType="textCapSentences|textMultiLine"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:textSize="14pt"
                android:text="@string/prompt_answer"/>
            <EditText
                android:layout_margin="8dp"
                android:id="@+id/answer_edit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:textSize="14pt"
                android:text="@string/prompt_options"/>
            <EditText
                android:layout_margin="8dp"
                android:id="@+id/option_edit_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />
            <EditText
                android:layout_margin="8dp"
                android:id="@+id/option_edit_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />
            <EditText
                android:layout_margin="8dp"
                android:id="@+id/option_edit_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>